--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     <div id="sidebar">
     </div>
-    <script type="text/javascript" src="sequences2.js"></script>
+    <script type="text/javascript" src="sequences_old_syntax.js"></script>
     <script type="text/javascript">
       // Hack to make this example display correctly in an iframe on bl.ocks.org
       d3.select(self.frameElement).style("height", "700px");
