--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" type="text/css" href="sequences.css"/>
   </head>
   <body>
-    <div id="label">Well-being Indicators Exploration Tool</div>
+    <div id="label">Well-being Indicators Exploration Tool </div>
+    <div> Select specific domains, indicators and sub-indicators to see details.</div>
     <div id="main">
       <div id="sequence"></div>
       <div id="chart">
