--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     </div>
     <div id="sidebar">
     </div>
-    <script type="text/javascript" src="sequences_old_syntax.js"></script>
+    <!-- <script type="text/javascript" src="demo_sunburst.js"></script> -->
+    <script type="text/javascript" src="wellbeing_sunburst.js"></script>
     <script type="text/javascript">
-      // Hack to make this example display correctly in an iframe on bl.ocks.org
       d3.select(self.frameElement).style("height", "700px");
   </script>
   </body>
