--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
     <link rel="stylesheet" type="text/css" href="sequences.css"/>
   </head>
   <body>
-    <div id="label">Well-being Indicators Exploration Tool </div>
+    <div id="label">Welcome to the Happiness Index Exploration Tool</div>
     <div> Select specific domains, indicators and sub-indicators to see details.</div>
+    <br />
+    <div> Have a look at the <a href="https://www.happycounts.org/">Happiness Alliance</a> project - the first nonprofit providing a scientifically valid measure of well-being online for communities, cities, countries and campuses worldwide.
+    Also, <a href="http://www.happinesscouncil.org/">The 2019 Global Happiness and Well-Being Policy Report</a></div>
     <div id="main">
       <div id="sequence"></div>
       <div id="chart">
