Updated the README

--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
   </head>
   <body>
     <div id="label">Welcome to the Happiness Index Exploration Tool</div>
-    <div> Select specific domains, indicators and sub-indicators to see details.</div>
-    <br />
-    <div> Have a look at the <a href="https://www.happycounts.org/">Happiness Alliance</a> project - the first nonprofit providing a scientifically valid measure of well-being online for communities, cities, countries and campuses worldwide.
-    Also, <a href="http://www.happinesscouncil.org/">The 2019 Global Happiness and Well-Being Policy Report</a></div>
+    <div> <a href="https://www.happycounts.org/"> The Happiness Alliance</a> provides tools, resources, and knowledge for a new economic paradigm. Select specific domains, indicators and sub-indicators to see details.</div>
+    
     <div id="main">
       <div id="sequence"></div>
       <div id="chart">
@@ -27,7 +25,7 @@
     <div id="sidebar">
     </div>
     <!-- <script type="text/javascript" src="demo_sunburst.js"></script> -->
-    <script type="text/javascript" src="wellbeing_sunburst.js"></script>
+    <script type="text/javascript" src="interactive_sunburst.js"></script>
     <script type="text/javascript">
       d3.select(self.frameElement).style("height", "700px");
   </script>
